add enable to systemd

--- a/ansible/roles/backend/tasks/main.yml
+++ b/ansible/roles/backend/tasks/main.yml
@@ -91,6 +91,7 @@
 
 - name: ensure service is started
   systemd:
+    enabled: true
     daemon_reload: true
     name: sausage-store-backend.service
     state: started 
