--- a/frontend/frontend-configmap.yaml
+++ b/frontend/frontend-configmap.yaml
@@ -1,14 +1,20 @@
-server {
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-html
+data:
+  index.html: |
+    server {
 
-  listen 8080;
+    listen 8080;
 
-  location / {
+    location / {
     root   /usr/share/nginx/html;
     index  index.html;
     try_files $uri $uri/ /index.html;
-  }
+    }
 
-  location /api {
-      proxy_pass http://backend:8080;
-  }
-} 
+    location /api {
+          proxy_pass http://backend:8080;
+    }
+    } 
