--- a/frontend/frontend-configmap.yaml
+++ b/frontend/frontend-configmap.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: nginx-html
+  name: nginx-conf
 data:
-  index.html: |
+  nginx.conf: |
     server {
 
-    listen 8080;
+    listen 80;
 
     location / {
     root   /usr/share/nginx/html;
