--- a/frontend/frontend-configmap.yaml
+++ b/frontend/frontend-configmap.yaml
@@ -4,17 +4,48 @@ metadata:
   name: nginx-conf
 data:
   nginx.conf: |
-    server {
+    user  nginx;
+    worker_processes  auto;
 
-    listen 8080;
+    error_log  /var/log/nginx/error.log notice;
+    pid        /var/run/nginx.pid;
 
-    location / {
-    root   /usr/share/nginx/html;
-    index  index.html;
-    try_files $uri $uri/ /index.html;
+
+    events {
+    worker_connections  1024;
     }
 
-    location /api {
+
+    http {
+        include       /etc/nginx/mime.types;
+        default_type  application/octet-stream;
+
+        log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                          '$status $body_bytes_sent "$http_referer" '
+                          '"$http_user_agent" "$http_x_forwarded_for"';
+
+        access_log  /var/log/nginx/access.log  main;
+
+        sendfile        on;
+        #tcp_nopush     on;
+
+        keepalive_timeout  65;
+
+        #gzip  on;
+
+        include /etc/nginx/conf.d/*.conf;
+        server {
+
+      listen 8080;
+
+      location / {
+        root   /usr/share/nginx/html;
+        index  index.html;
+        try_files $uri $uri/ /index.html;
+      }
+
+      location /api {
           proxy_pass http://backend:8080;
-    }
+      }
     } 
+    }
