--- a/frontend/frontend-deployment.yaml
+++ b/frontend/frontend-deployment.yaml
@@ -25,8 +25,8 @@ spec:
               containerPort: 8080
           volumeMounts:
           - name: nginx-conf
-            mountPath: /etc/nginx/nginx.conf
-            subPath: nginx.conf
+            mountPath: /etc/nginx/conf.d/default.conf
+            subPath: default.conf
             readOnly: true
       volumes:
         - name: nginx-conf
