--- a/frontend/frontend-deployment.yaml
+++ b/frontend/frontend-deployment.yaml
@@ -34,6 +34,6 @@ spec:
             name: nginx-conf
             items:
               - key: nginx.conf
-                path: nginx.conf
+                path: default.conf
       imagePullSecrets:
         - name: docker-config-secret
