--- a/backend-report/backend-report-deployment.yaml
+++ b/backend-report/backend-report-deployment.yaml
@@ -22,9 +22,9 @@ spec:
           imagePullPolicy: IfNotPresent
           env:
             - name: VAULT_URL
-              value: http://62.84.127.198:8200/
+              value: 'http://62.84.127.198:8200'
             - name: REPORT_PORT
-              value: 8080
+              value: '8080'
             - name: VAULT_TOKEN
               valueFrom:
                 secretKeyRef:
