--- a/frontend/frontend-deployment.yaml
+++ b/frontend/frontend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: frontend
           image: gitlab.praktikum-services.ru:5050/std-009-052/sausage-store/sausage-frontend:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - name: frontend
               containerPort: 8080
