--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,9 @@ deploy-job:
   rules:
     - changes:
       - kubernetes/**/*
+  environment:
+    name: kuber
+    url: https://shelgunova-valerie-10.k8s.praktikum-services.tech/
   script:
     - mkdir ~/.kube/
     - echo "$KUBE_CONFIG" | base64 -d > ~/.kube/config
