--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ apply-kuber-manifests:
     - kubectl apply -f kubernetes/backend/
     - kubectl apply -f kubernetes/frontend/
     - kubectl apply -f kubernetes/backend-report/
+    - rm -f ~/.kube/config
     
   
     
