--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ apply-kuber-manifests:
     - kubectl apply -f kubernetes/frontend/
     - kubectl apply -f kubernetes/backend-report/
     - rm -f ~/.kube/config
+    - ls -a ~/.kube/
     
   
     
