--- a/kubernetes/backend-report/backend-report-deployment.yaml
+++ b/kubernetes/backend-report/backend-report-deployment.yaml
@@ -46,7 +46,7 @@ spec:
       imagePullSecrets:
         - name: docker-config-secret
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: backend-report-hpa
@@ -59,11 +59,5 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: backend-report
-  metrics:
-    — type: Resource
-      resource:
-        name: cpu
-        target:
-          type: Utilization
-          averageUtilization: 1 
+  targetCPUUtilizationPercentage: 1
 
