--- a/kubernetes/backend-report/backend-report-deployment.yaml
+++ b/kubernetes/backend-report/backend-report-deployment.yaml
@@ -22,6 +22,13 @@ spec:
         - name: backend-report
           image: gitlab.praktikum-services.ru:5050/std-009-052/sausage-store/sausage-backend-report:latest
           imagePullPolicy: Always
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: 0.1
+            limits:
+              memory: "1025Mi"
+              cpu: 0.2 
           env:
             - name: VAULT_URL
               value: 'http://62.84.127.198:8200'
@@ -59,5 +66,5 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: backend-report
-  targetCPUUtilizationPercentage: 75
+  targetCPUUtilizationPercentage: 2
 
