--- a/kubernetes/backend-report/backend-report-deployment.yaml
+++ b/kubernetes/backend-report/backend-report-deployment.yaml
@@ -60,17 +60,17 @@ metadata:
   labels:
     app: backend-report-hpa
 spec:
-  minReplicas: 1
+  minReplicas: 2
   maxReplicas: 5
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: backend-report
   metrics:
-    — type: Resource
+    - type: Resource
       resource:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: 2 
+          averageUtilization: 2
 
