--- a/kubernetes/backend/backend-deployment.yaml
+++ b/kubernetes/backend/backend-deployment.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     app: backend
 spec:
-  # максимум 2 пода из-за 
   replicas: 2
   revisionHistoryLimit: 15
   strategy:
+    # 2 pod max because of "too many active clients for user" postgress error
     type: RollingUpdate 
     rollingUpdate:
       maxUnavailable: 1
