--- a/kubernetes/frontend/frontend-deployment.yaml
+++ b/kubernetes/frontend/frontend-deployment.yaml
@@ -17,6 +17,15 @@ spec:
       labels:
         app: frontend
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - frontend            
       containers:
         - name: frontend
           image: gitlab.praktikum-services.ru:5050/std-009-052/sausage-store/sausage-frontend:latest
