--- a/sausage-store-chart/charts/frontend/templates/frontend-service.yaml
+++ b/sausage-store-chart/charts/frontend/templates/frontend-service.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: frontend
   labels:
-    app: backend
+    app: frontend
 spec:
   type: ClusterIP
   ports:
-    - port: {{ .Values.global.backend.service.ports.port }}
+    - port: {{ .Values.global.frontend.service.ports.port }}
       protocol: TCP
       targetPort: 8080
   selector:
-    app: backend 
+    app: frontend 
