--- a/sausage-store-chart/Chart.yaml
+++ b/sausage-store-chart/Chart.yaml
@@ -4,13 +4,13 @@ type: application
 name: sausage-store
 description: Sausage Store Helm Chart
 
-version: 0.1.0
+version: 0.1.3
 appVersion: "latest"
 
 dependencies:
-  ‐ name: backend
-    version: 0.1.0
-  ‐ name: backend-report
-    version: 0.1.0
-  ‐ name: frontend
-    version: 0.1.0 
+  - name: backend
+    version: 0.1.3
+  - name: frontend
+    version: 0.1.3
+  - name: backend-report
+    version: 0.1.3
