--- a/sausage-store-chart/charts/backend-report/Chart.yaml
+++ b/sausage-store-chart/charts/backend-report/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 type: application
-name: backend
+name: backend-report
 description: Sausage Store Helm Chart
 
 version: 0.1.3
