--- a/sausage-store-chart/charts/backend-report/templates/backend-report-service.yaml
+++ b/sausage-store-chart/charts/backend-report/templates/backend-report-service.yaml
@@ -2,14 +2,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: backend-report
   labels:
-    app: backend
+    app: backend-report
 spec:
   type: ClusterIP
   ports:
-    - port: {{ .Values.global.backend.service.ports.port }}
+    - port: {{ .Values.global.backend_report.service.ports.port }}
       protocol: TCP
       targetPort: 8080
   selector:
-    app: backend 
+    app: backend-report 
+
