--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,25 +1,44 @@
 stages:
-  - deploy
+  - build
+  - release
+  # - deploy
 
-apply-kuber-manifests:
-  stage: deploy
+build-helm-package:
+  stage: build
   image: alpine/k8s:1.24.12
   rules:
     - changes:
       - sausage-store-chart/**/*
-  environment:
-    name: helm
-    url: https://shelgunova-valerie-10.k8s.praktikum-services.tech/
-  script:
-    - mkdir ~/.kube/
-    - echo "$KUBE_CONFIG" | base64 -d > ~/.kube/config
-    - helm repo add sausage-store https://nexus.k8s.praktikum-services.tech/repository/sausage-store-helm-valerie-shelgunova-12/ --username std-009-052 --password 1/EnFw+8 
-    - helm repo list
-    - helm repo update 
-    - pwd
-    - ls
+script: 
+  - helm package sausage-store-chart/
+  - ls
 
-    - rm -f ~/.kube/config
+
+
+
+
+# apply-kuber-manifests:
+#   stage: deploy
+#   image: alpine/k8s:1.24.12
+#   rules:
+#     - changes:
+#       - sausage-store-chart/**/*
+#   environment:
+#     name: helm
+#     url: https://shelgunova-valerie-10.k8s.praktikum-services.tech/
+#   script:
+#     - mkdir ~/.kube/
+#     - echo "$KUBE_CONFIG" | base64 -d > ~/.kube/config
+
+#     - helm repo add sausage-store https://nexus.k8s.praktikum-services.tech/repository/sausage-store-helm-valerie-shelgunova-12/ --username std-009-052 --password 1/EnFw+8 
+#     - helm repo list
+#     - helm repo update 
+#     - pwd
+#     - ls
+#     - cd sausage-store-chart/
+#     -
+
+#     - rm -f ~/.kube/config
     
   
     
