--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,10 @@ build-helm-package:
       - sausage-store-chart/**/*
   script: 
     - helm package sausage-store-chart/
-  artifacts:
-    paths:
-      - sausage-store*.tgz
-    expire_in: 1 day
+  # artifacts:
+  #   paths:
+  #     - sausage-store*.tgz
+  #   expire_in: 1 day
 
 release-helm-package:
   stage: release
