--- a/sausage-store-chart/charts/backend/templates/backend-secrets.yaml
+++ b/sausage-store-chart/charts/backend/templates/backend-secrets.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: vault
 data:
-  SPRING_CLOUD_VAULT_TOKEN: aHZzLkNBRVNJQm9ZQmpJRlBSdjM5eGdRbHBhdV9JSGF1ODhHVFdkZzFkMzZSLWxyNVdlTkdoNEtIR2gyY3k1Sk9WVnRkbFJQVDNFMVJXZzFjSFo2VFd0dWRuQlVkbWM=
+  VAULT_TOKEN: aHZzLkNBRVNJQm9ZQmpJRlBSdjM5eGdRbHBhdV9JSGF1ODhHVFdkZzFkMzZSLWxyNVdlTkdoNEtIR2gyY3k1Sk9WVnRkbFJQVDNFMVJXZzFjSFo2VFd0dWRuQlVkbWM=
 type: Opaque
 
 ---
