--- a/sausage-store-chart/charts/backend-report/templates/backend-report-deployment.yaml
+++ b/sausage-store-chart/charts/backend-report/templates/backend-report-deployment.yaml
@@ -39,7 +39,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: vault
-                  key: SPRING_CLOUD_VAULT_TOKEN
+                  key: VAULT_TOKEN
           ports:
             - name: backend-report
               containerPort: 8080
