--- a/sausage-store-chart/values.yaml
+++ b/sausage-store-chart/values.yaml
@@ -9,7 +9,7 @@ global:
     replicas: 2
     env:
       VAULT_HOST: 62.84.127.198
-      VAULT_PORT: "8200"
+      VAULT_PORT: 8200
       REPORT_PATH: /var/reports
     service:
       ports:
