--- a/sausage-store-chart/charts/backend/templates/backend-deployment.yaml
+++ b/sausage-store-chart/charts/backend/templates/backend-deployment.yaml
@@ -34,7 +34,7 @@ spec:
             - name: VAULT_HOST
               value: {{ .Values.global.backend.env.VAULT_HOST }}
             - name: VAULT_PORT
-              value: {{ .Values.global.backend.env.VAULT_PORT }}
+              value: {{ .Values.global.backend.env.VAULT_PORT | quote}}
             - name: REPORT_PATH
               value: {{ .Values.global.backend.env.REPORT_PATH }}
             - name: VAULT_TOKEN
