--- a/sausage-store-chart/charts/backend/templates/backend-deployment.yaml
+++ b/sausage-store-chart/charts/backend/templates/backend-deployment.yaml
@@ -23,6 +23,10 @@ spec:
       app: backend
   template:
     metadata:
+      annotations:
+        prometheus.io/path: /metrics
+        prometheus.io/port: "8080"
+        prometheus.io/scrape: "true" 
       labels:
         app: backend
     spec:
