--- a/sausage-store-chart/charts/backend/templates/backend-deployment.yaml
+++ b/sausage-store-chart/charts/backend/templates/backend-deployment.yaml
@@ -24,7 +24,7 @@ spec:
   template:
     metadata:
       annotations:
-        prometheus.io/path: /metrics
+        prometheus.io/path: /actuator/prometheus
         prometheus.io/port: "8080"
         prometheus.io/scrape: "true" 
       labels:
